--- a/FoodPiper/ViewPeep.xib
+++ b/FoodPiper/ViewPeep.xib
@@ -13,6 +13,7 @@
         <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="7aQ-sY-faN">
             <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <point key="canvasLocation" x="-853" y="445"/>
         </scrollView>
     </objects>
